menu overflow fix

--- a/assets/sass/4-states/_menu-open.sass
+++ b/assets/sass/4-states/_menu-open.sass
@@ -1,5 +1,9 @@
 @import '../config'
 
+.menu-open
+	overflow: hidden
+	-webkit-overflow-scrolling: touch
+
 .menu-open .menu
 	transform: translateX(100%)
 	transition: transform 300ms ease-in
